--- a/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
       data:
         admin-user: "{{ .ADMIN_USER }}"
         admin-password: "{{ .ADMIN_PASSWORD }}"
-        ldap.toml: |
+        ldap-toml: |
           verbose_logging = true
           [[servers]]
           host = "{{ .LDAP_SERVER }}"
