--- a/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/helmrelease.yaml
@@ -55,21 +55,21 @@ spec:
       auth.ldap:
         enabled: true
         allow_sign_up: true
-        config_file: /secrets/ldap.toml
+        config_file: /etc/grafana/ldap.toml
       news:
         news_feed_enabled: false
-    extraVolumeMounts:
-      - name: ldap
-        mountPath: /etc/grafana/ldap.toml
-        subPath: ldap.toml
-        readOnly: true
-    extraVolumes:
-      - name: ldap
-        secret:
-          secretName: grafana
-          items:
-            - key: ldap-toml
-              path: ldap.toml
+    # extraVolumeMounts:
+    #   - name: ldap
+    #     mountPath: /etc/grafana/ldap.toml
+    #     subPath: ldap.toml
+    #     readOnly: true
+    # extraVolumes:
+    #   - name: ldap
+    #     secret:
+    #       secretName: grafana
+    #       items:
+    #         - key: ldap-toml
+    #           path: ldap.toml
     dashboardProviders:
       dashboardproviders.yaml:
         apiVersion: 1
