--- a/kubernetes/bootstrap/externalsecret.yaml
+++ b/kubernetes/bootstrap/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
   provider:
     vault:
       server: "https://vault.feelingsmachine.com"
-      path: "kv"
+      path: "kv/k8s"
       version: "v2"
       auth:
         kubernetes:
