--- a/kubernetes/apps/monitoring/externalsecret.yaml
+++ b/kubernetes/apps/monitoring/externalsecret.yaml
@@ -14,7 +14,7 @@ spec:
   provider:
     vault:
       server: "https://vault.${LOCAL_DOMAIN}"
-      path: "kv"
+      path: "secret/${ENVIRONMENT}"
       version: "v2"
       auth:
         kubernetes:
