--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,3 @@
-# kubernetes
-ENVIRONMENT="example"
-DOMAIN=example.com
-VIP_IP="192.168.0.100"
-VIP_PORT="443"
-SERVER_CIDR="192.168.0.0/24"
-
-# vault
-VAULT_ADDR="https://vault.example.com"
-VAULT_TOKEN="xxxxxxxx"
-VAULT_UNSEAL_KEY_1="xxxxxxxx"
-VAULT_UNSEAL_KEY_2="xxxxxxxx"
-VAULT_UNSEAL_KEY_3="xxxxxxxx"
-
 # cloudflare
 CLOUDFLARE_EMAIL="dan@example.com"
 CLOUDFLARE_TOKEN="xxxxxxxx"
@@ -36,7 +22,6 @@ GRAFANA_LDAP_USERNAME="xxxxxxxx"
 GRAFANA_LDAP_PASSWORD="xxxxxxxx"
 GRAFANA_LDAP_ROOT="dc=ldap,dc=example,dc=com"
 
-
 # home-assistant
 HASS_POSTGRES_USER="xxxxxxxx"
 HASS_POSTGRES_PASSWORD="xxxxxxxx"
@@ -59,8 +44,23 @@ IMMICH_TYPESENSE_API_KEY="xxxxxxxx"
 IMMICH_POSTGRES_SUPER_USER="xxxxxxxx"
 IMMICH_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
 
+# kubernetes
+ENVIRONMENT="example"
+DOMAIN=example.com
+VIP_IP="192.168.0.100"
+VIP_PORT="443"
+SERVER_CIDR="192.168.0.0/24"
+DOCKER_PRIVATE_REGISTRY="xxxxxxxx"
+
 # nfs exports
 NFS_SERVER_IP="192.168.0.200"
 
 # slack
 SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
+
+# vault
+VAULT_ADDR="https://vault.example.com"
+VAULT_TOKEN="xxxxxxxx"
+VAULT_UNSEAL_KEY_1="xxxxxxxx"
+VAULT_UNSEAL_KEY_2="xxxxxxxx"
+VAULT_UNSEAL_KEY_3="xxxxxxxx"
