--- a/kubernetes/apps/volsync/kustomization.yaml
+++ b/kubernetes/apps/volsync/kustomization.yaml
@@ -7,11 +7,4 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
-  - ./cilium/ks.yaml
-  - ./coredns/ks.yaml
-  - ./descheduler/ks.yaml
-  - ./local-path-provisioner/ks.yaml
-  - ./metrics-server/ks.yaml
-  - ./node-feature-discovery/ks.yaml
-  - ./reloader/ks.yaml
-  - ./snapshot-controller/ks.yaml
+  #- ./volsync/ks.yaml
