--- a/kubernetes/flux/repositories/helm/weaveworks.yaml
+++ b/kubernetes/flux/repositories/helm/weaveworks.yaml
@@ -2,8 +2,9 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
-  name: cloudnative-pg
+  name: weaveworks
   namespace: flux-system
 spec:
-  interval: 2h
-  url: https://cloudnative-pg.github.io/charts
+  type: oci
+  interval: 5m
+  url: oci://ghcr.io/weaveworks/charts
