--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -8,6 +8,8 @@ tasks:
       - task vault:disable-k8s-auth
       - task vault:enable-k8s-auth
       - task vault:add-roles
+      - task vault:add-roles
+      - task vault:add-kv-secrets
   status:
     desc: vault status
     cmds:
@@ -106,12 +108,6 @@ tasks:
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=ingress
           policies=ingress,default
-          ttl=1440h
-      - echo "path \"secret/{{.ENVIRONMENT}}/data/volsync/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write volsync -
-      - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/volsync
-          bound_service_account_names=vault-auth
-          bound_service_account_namespaces=volsync
-          policies=volsync,default
           ttl=1440h
   # database
 #   disable-database-engine:
