--- a/kubernetes/apps/ingress/kustomization.yaml
+++ b/kubernetes/apps/ingress/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - ./namespace.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
-  - ./certificates
+  #- ./certificates
   - ./gateways
