--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -8,5 +8,5 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./cloudnative-pg/ks.yaml
-  - ./emqx/ks.yaml
+  #- ./emqx/ks.yaml
   - ./redis/ks.yaml
