--- a/kubernetes/apps/database/emqx/app/helmrelease.yaml
+++ b/kubernetes/apps/database/emqx/app/helmrelease.yaml
@@ -35,8 +35,9 @@ spec:
       EMQX_DASHBOARD__DEFAULT_USERNAME: admin
     service:
       type: LoadBalancer
+      loadBalancerIP:  ${EMQX_LB_IP}
       annotations:
-        io.cilium/lb-ipam-ips: ${MQTT_LB_IP}
+        io.cilium/lb-ipam-ips: ${EMQX_LB_IP}
       externalTrafficPolicy: Cluster
     ingress:
       dashboard:
