test restic based volsync backup

--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,10 @@ DOCKER_PRIVATE_REGISTRY="xxxxxxxx"
 # nfs exports
 NFS_SERVER_IP="192.168.0.200"
 
+# restic
+RESTIC_URL="https://user@restic.example.com"
+RESTIC_PASSWORD="xxxxxxxx"
+
 # slack
 SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
 
