--- a/kubernetes/apps/home-automation/frigate/app/volsync.yaml
+++ b/kubernetes/apps/home-automation/frigate/app/volsync.yaml
@@ -18,7 +18,7 @@ spec:
         RESTIC_PASSWORD: '{{ .RESTIC_PASSWORD }}'
   dataFrom:
     - extract:
-        key: /volsync/frigate
+        key: /volsync/volsync
 ---
 apiVersion: volsync.backube/v1alpha1
 kind: ReplicationSource
