--- a/.env.example
+++ b/.env.example
@@ -56,8 +56,7 @@ DOCKER_PRIVATE_REGISTRY="xxxxxxxx"
 NFS_SERVER_IP="192.168.0.200"
 
 # restic
-RESTIC_URL="https://user@restic.example.com"
-RESTIC_PASSWORD="xxxxxxxx"
+RESTIC_URL="rest:https://xxxxxxxx:xxxxxxxx@restic.example.com"
 
 # slack
 SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
