--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -258,6 +258,7 @@ tasks:
       # volsync/volsync
       - vault kv put -mount=secret/{{.ENVIRONMENT}} volsync/volsync
           RESTIC_URL="{{.RESTIC_URL}}"
+          RESTIC_FRIGATE_PASSWORD="{{.RESTIC_FRIGATE_PASSWORD}}"
     #   # home-automation/rtlamr-collect
     #   - vault kv put -mount=secret/{{.ENVIRONMENT}} home-automation/rtlamr-collect
     #       RTLAMR_METERS="{{.RTLAMR_METERS}}"
