--- a/.env.example
+++ b/.env.example
@@ -57,6 +57,7 @@ NFS_SERVER_IP="192.168.0.200"
 
 # restic
 RESTIC_URL="rest:https://xxxxxxxx:xxxxxxxx@restic.example.com"
+RESTIC_FRIGATE_PASSWORD="xxxxxxxx"
 
 # slack
 SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
