--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -77,7 +77,7 @@ tasks:
       - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/home-automation
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=home-automation
-          policies=volsync-frigate,volsync-home-assistant,database,home-automation,default
+          policies=volsync,database,home-automation,default
           ttl=1440h
       - echo "path \"secret/{{.ENVIRONMENT}}/data/media/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write media -
       - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/media
@@ -111,7 +111,7 @@ tasks:
           ttl=1440h
       - echo "path \"secret/{{.ENVIRONMENT}}/data/volsync/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write volsync -
       - echo "path \"secret/{{.ENVIRONMENT}}/data/volsync/frigate\" { capabilities = [\"read\", \"list\"] }" | vault policy write volsync-frigate -
-      - echo "path \"secret/{{.ENVIRONMENT}}/data/volsync/home-assistant\" { capabilities = [\"read\", \"list\"] }" | vault policy write volsync-home-assistant-
+      - echo "path \"secret/{{.ENVIRONMENT}}/data/volsync/home-assistant\" { capabilities = [\"read\", \"list\"] }" | vault policy write volsync-home-assistant -
       - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/volsync
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=volsync
