--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,8 @@ NFS_SERVER_IP="192.168.0.200"
 # restic
 RESTIC_URL="rest:https://xxxxxxxx:xxxxxxxx@restic.example.com"
 RESTIC_FRIGATE_PASSWORD="xxxxxxxx"
+RESTIC_HASS_PASSWORD="xxxxxxxx"
+RESTIC_ZWAVEJS_PASSWORD="xxxxxxxx"
 
 # slack
 SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
