--- a/kubernetes/apps/database/influxdb/app/kustomization.yaml
+++ b/kubernetes/apps/database/influxdb/app/kustomization.yaml
@@ -1,13 +1,8 @@
----
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: database
 resources:
-  # Pre Flux-Kustomizations  
-  - ./namespace.yaml
   - ./externalsecret.yaml
-  # Flux-Kustomizations
-  - ./cloudnative-pg/ks.yaml
-  - ./emqx/ks.yaml
-  - ./influxdb/ks.yaml
-  - ./redis/ks.yaml
+  - ./helmrelease.yaml
