--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,10 @@ IMMICH_TYPESENSE_API_KEY="xxxxxxxx"
 IMMICH_POSTGRES_SUPER_USER="xxxxxxxx"
 IMMICH_POSTGRES_SUPER_PASSWORD="xxxxxxxx"
 
+# influxdb
+INFLUXDB_USER="xxxxxxxx"
+INFLUXDB_PASSWORD="xxxxxxxx"
+
 # kubernetes
 ENVIRONMENT="example"
 DOMAIN=example.com
