--- a/.taskfiles/vault.yaml
+++ b/.taskfiles/vault.yaml
@@ -110,9 +110,6 @@ tasks:
           policies=ingress,default
           ttl=1440h
       - echo "path \"secret/{{.ENVIRONMENT}}/data/volsync/*\" { capabilities = [\"read\", \"list\"] }" | vault policy write volsync -
-      - echo "path \"secret/{{.ENVIRONMENT}}/data/volsync/frigate\" { capabilities = [\"read\", \"list\"] }" | vault policy write volsync-frigate -
-      - echo "path \"secret/{{.ENVIRONMENT}}/data/volsync/home-assistant\" { capabilities = [\"read\", \"list\"] }" | vault policy write volsync-home-assistant -
-      - echo "path \"secret/{{.ENVIRONMENT}}/data/volsync/zwavejs\" { capabilities = [\"read\", \"list\"] }" | vault policy write volsync-zwavejs -
       - vault write auth/kubernetes/{{.ENVIRONMENT}}/role/volsync
           bound_service_account_names=vault-auth
           bound_service_account_namespaces=volsync
@@ -208,6 +205,10 @@ tasks:
           admin_password="{{.EMQX_ADMIN_PASSWORD}}"
           user_1_username="{{.EMQX_USER1_NAME}}"
           user_1_password="{{.EMQX_USER1_PASSWORD}}"
+      # database/influxdb
+      - vault kv put -mount=secret/{{.ENVIRONMENT}} database/influxdb
+          INFLUXDB_USER="{{.INFLUXDB_USER}}"
+          INFLUXDB_PASSWORD="{{.INFLUXDB_PASSWORD}}"
       # media/immich
       - vault kv put -mount=secret/{{.ENVIRONMENT}} media/immich
           IMMICH_JWT_SECRET="{{.IMMICH_JWT_SECRET}}"
