--- a/kubernetes/apps/database/influxdb/ks.yaml
+++ b/kubernetes/apps/database/influxdb/ks.yaml
@@ -2,10 +2,10 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-emqx
+  name: cluster-apps-influxdb
   namespace: flux-system
 spec:
-  path: ./kubernetes/apps/database/emqx/app
+  path: ./kubernetes/apps/database/influxdb/app
   prune: true
   sourceRef:
     kind: GitRepository
