--- a/kubernetes/apps/home-automation/home-assistant/ks.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/ks.yaml
@@ -7,6 +7,7 @@ metadata:
 spec:
   dependsOn:
     - name: cluster-apps-home-automation-home-assistant-database
+    - name: cluster-apps-influxdb
   path: ./kubernetes/apps/home-automation/home-assistant/app
   prune: true
   sourceRef:
