--- a/.env.example
+++ b/.env.example
@@ -65,8 +65,23 @@ RESTIC_FRIGATE_PASSWORD="xxxxxxxx"
 RESTIC_HASS_PASSWORD="xxxxxxxx"
 RESTIC_ZWAVEJS_PASSWORD="xxxxxxxx"
 
+# rtlamr-collect
+RTLAMR_METERS="xxxxxxxx"
+RTLAMR_MSGTYPE="scm,scm+"
+RTLAMR_INFLUXDB_DBNAME="rtlamr_collect"
+
 # slack
 SLACK_WEBHOOK="https://hooks.slack.com/services/xxxxxxxx"
+
+# tidbyt
+TIDBYT_API_KEY="xxxxxxxx"
+TIDBYT_DEVICE_ID="xxxxxxxx"
+TIDBYT_MQTT_TOPIC="xxxxxxxx"
+
+# unifi-downloader
+UNIFI_DOWNLOADER_HOST="192.168.0.1"
+UNIFI_DOWNLOADER_USERNAME="xxxxxxxx"
+UNIFI_DOWNLOADER_PASSWORD="xxxxxxxx"
 
 # vault
 VAULT_ADDR="https://vault.example.com"
