enable tidbyt proxy

--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -10,4 +10,5 @@ resources:
   - ./esphome/ks.yaml
   - ./frigate/ks.yaml
   - ./home-assistant/ks.yaml
+  - ./tidbyt-proxy/ks.yaml
   #- ./zwave-js-ui/ks.yaml
