--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -11,4 +11,5 @@ resources:
   - ./frigate/ks.yaml
   - ./home-assistant/ks.yaml
   - ./tidbyt-proxy/ks.yaml
+  - ./unifi-downloader/ks.yaml
   #- ./zwave-js-ui/ks.yaml
