--- a/kubernetes/apps/home-automation/frigate/app/nfs-pvc.yaml
+++ b/kubernetes/apps/home-automation/frigate/app/nfs-pvc.yaml
@@ -11,7 +11,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   nfs:
     server: ${NFS_SERVER_IP}
-    path: /data/volumes/frigate
+    path: /data/volumes/cctv
   mountOptions: ["nfsvers=4.2", "nconnect=8", "hard", "noatime"]
 ---
 apiVersion: v1
