--- a/kubernetes/apps/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -79,7 +79,7 @@ spec:
         hostPath: /dev/serial/by-id/dev/serial/by-id/usb-Silicon_Labs_CP2102N_USB_to_UART_Bridge_Controller_0030b5ff1aa4eb11a16526259da30875-if00-port0    
         hostPathType: CharDevice
     nodeSelector:    
-      feature.node.kubernetes.io/skyconnect=true
+      feature.node.kubernetes.io/skyconnect: "true"
     resources:
       requests:
         cpu: 10m
