--- a/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -63,6 +63,14 @@ spec:
         accessMode: ReadWriteOnce
         size: 5Gi
         storageClass: ceph-block
+    persistence:
+      usb:
+        enabled: true
+        type: hostPath
+        hostPath: /dev/serial/by-id/usb-Nabu_Casa_SkyConnect_v1.0_9ae749b85541ed11a39a83a7ccf2b06c-if00-port0
+        hostPathType: CharDevice
+    nodeSelector:    
+      feature.node.kubernetes.io/skyconnect: "true"
     resources:
       requests:
         cpu: 10m
