--- a/kubernetes/apps/home-automation/home-assistant/app/externalsecret.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/externalsecret.yaml
@@ -23,3 +23,45 @@ spec:
   dataFrom:
     - extract:
         key: /home-automation/home-assistant
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: home-assistant-auth
+  namespace: home-automation
+spec:
+  refreshInterval: "30m"
+  secretStoreRef:
+    name: vault-kv-backend
+    kind: SecretStore
+  target:
+    name: home-assistant-auth
+    template:
+      type: opaque
+      data:
+        home-assistant.cfg: |
+          CLIENT="ldapsearch"
+          DEBUG=0
+          USERNAME_PATTERN='^[a-z|A-Z|0-9|_|-|.]+$'
+          SERVER="ldaps://ldap.{{ .LOCAL_DOMAIN }}"
+          USERDN="uid=$(ldap_dn_escape "$username"),cn=users,{{ .LDAP_ROOT }}"
+          BASEDN="$USERDN"
+          SCOPE="base"
+          FILTER="(&(uid=$(ldap_dn_escape "$username"))(memberOf=cn=home-assistant,cn=groups,{{ .LDAP_ROOT }}))"
+          ATTRS="uid"
+          TIMEOUT=3
+
+          NAME_ATTR="title"
+          ATTRS="$ATTRS $NAME_ATTR"
+
+          on_auth_success() {
+            # print the meta entries for use in HA
+            if [ ! -z "$NAME_ATTR" ]; then
+              name=$(echo "$output" | sed -nr "s/^\s*$NAME_ATTR:\s*(.+)\s*\$/\1/Ip")
+              [ -z "$name" ] || echo "name=$name"
+            fi
+          }
+  dataFrom:
+    - extract:
+        key: /home-automation/home-assistant
+
