--- a/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -63,6 +63,10 @@ spec:
         accessMode: ReadWriteOnce
         size: 5Gi
         storageClass: ceph-block
+    lifecycle:
+      postStart:
+        exec:
+          command: ["/sbin/apk", "add", "openldap-clients"]
     persistence:
       auth:
         enabled: true
