--- a/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/helmrelease.yaml
@@ -50,6 +50,8 @@ spec:
     ingress:
       main:
         enabled: false
+    securityContext:
+      privileged: true
     probes:
       liveness:
         enabled: false
