add volsync task (thx opendr0p!)

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -17,6 +17,7 @@ includes:
   kubernetes: .taskfiles/kubernetes.yaml
   proxmox: .taskfiles/proxmox.yaml
   vault: .taskfiles/vault.yaml
+  volsync: .taskfiles/VolSync/Tasks.yaml
 
 tasks:
 
