--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,7 @@ HASS_LDAP_ROOT="dc=some,dc=example,dc=com"
 HASS_LOCAL_DOMAIN="example.com"
 HASS_LOCATION_LAT="00.0000000"
 HASS_LOCATION_LONG="-00.0000000"
+HASS_DRAC_IP="xxxxxxxx"
 
 # immich
 IMMICH_POSTGRES_USER="immich"
