--- a/kubernetes/apps/home-automation/home-assistant/app/externalsecret.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/externalsecret.yaml
@@ -20,6 +20,7 @@ spec:
         location_lat: "{{ .LOCATION_LAT }}"
         location_long: "{{ .LOCATION_LONG }}"
         db_url: "postgresql://{{ .HASS_POSTGRES_USER }}:{{ .HASS_POSTGRES_PASSWORD }}@home-assistant-rw.home-automation.svc.cluster.local/home_assistant"
+        drac_ip: "{{ .DRAC_IP }}"
   dataFrom:
     - extract:
         key: /home-automation/home-assistant
