--- a/kubernetes/apps/database/postgresql/ks.yaml
+++ b/kubernetes/apps/database/postgresql/ks.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-postgres
+  name: postgresql
   namespace: flux-system
 resources:
   - helmrelease.yaml
