--- a/kubernetes/apps/longhorn-system/helmrelease.yaml
+++ b/kubernetes/apps/longhorn-system/helmrelease.yaml
@@ -24,6 +24,6 @@ spec:
       recurringJobSelector:
         enable: false
     defaultSettings:
-      backupTarget: "nfs://${NFS_HOST}:/volume1/pv/production/longhorn"
+      backupTarget: "nfs://192.168.10.2:/volume1/pv/production/longhorn"
     ingress:
       enabled: false
