--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -11,4 +11,4 @@ resources:
   - ./emqx/ks.yaml
   - ./influxdb/ks.yaml
   - ./redis/ks.yaml
-  - ./postgresql/kustomization.yaml
+  - ./postgresql/ks.yaml
