--- a/kubernetes/apps/home-automation/home-assistant/app/kustomization.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/kustomization.yaml
@@ -8,6 +8,6 @@ resources:
   - ./configmap.yaml
   - ./helmrelease.yaml
   - ./httproute.yaml
-  - ./volsync.yaml
+  # - ./volsync.yaml
 patchesStrategicMerge:
   - ./patches/addons.yaml
