--- a/kubernetes/apps/media/immich/app/proxy/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/proxy/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
             port: 8080
     ingress:
       main:
-        enabled: true
+        enabled: false
     topologySpreadConstraints:
       - maxSkew: 1
         topologyKey: kubernetes.io/hostname
