--- a/kubernetes/apps/media/immich/app/web/helmrelease.yaml
+++ b/kubernetes/apps/media/immich/app/web/helmrelease.yaml
@@ -52,7 +52,7 @@ spec:
             port: 3000
     ingress:
       main:
-        enabled: true
+        enabled: false
     persistence:
       library:
         enabled: true
