--- a/kubernetes/apps/ingress/ingress/ingress.yaml
+++ b/kubernetes/apps/ingress/ingress/ingress.yaml
@@ -17,7 +17,7 @@ spec:
     - backend:
         service:
           name: hubble-ui
-          namespace: kube-system
+          #namespace: kube-system
           port:
             number: 80
         path: /
