--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -40,7 +40,7 @@ spec:
     endpointRoutes:
       enabled: true
     gatewayAPI:
-      enabled: false
+      enabled: true
       service:
         loadBalancerIP: "${CILIUM_LB_IP}"
     hubble:
