--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -39,10 +39,10 @@ spec:
       socketPath: /var/run/k3s/containerd/containerd.sock
     endpointRoutes:
       enabled: true
-    gatewayAPI:
-      enabled: true
-      service:
-        loadBalancerIP: "${CILIUM_LB_IP}"
+    # gatewayAPI:
+    #   enabled: true
+    #   service:
+    #     loadBalancerIP: "${CILIUM_LB_IP}"
     ingressController:
       enabled: true
       loadbalancerMode: shared
@@ -55,9 +55,9 @@ spec:
         name: cilium-ingress
         type: LoadBalancer
         loadBalancerIP: "${CILIUM_LB_IP}"
-    extraConfig:
-      enable-gateway-api: "true"
-      enable-gateway-api-secrets-sync: "true"
+    # extraConfig:
+    #   enable-gateway-api: "true"
+    #   enable-gateway-api-secrets-sync: "true"
       gateway-api-secrets-namespace: "ingress"
     hubble:
       enabled: true
@@ -96,6 +96,7 @@ spec:
       leaseRetryPeriod: 1s
     loadBalancer:
       algorithm: maglev
+      serviceTopology: true
       mode: dsr
     localRedirectPolicy: true
     operator:
