--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -46,18 +46,14 @@ spec:
     ingressController:
       enabled: true
       loadbalancerMode: shared
+      default: true
       enforceHttps: true
-      secretsNamespace:
-        create: false
-        name: ingress
-        sync: true
+      defaultSecretName: "${DOMAIN/./-}-tls"
+      defaultSecretNamespace: ingress
       service:
         name: cilium-ingress
         type: LoadBalancer
         loadBalancerIP: "${CILIUM_LB_IP}"
-    # extraConfig:
-    #   enable-gateway-api: "true"
-    #   enable-gateway-api-secrets-sync: "true"
       gateway-api-secrets-namespace: "ingress"
     hubble:
       enabled: true
