--- a/kubernetes/apps/home-automation/esphome/app/httproute.yaml
+++ b/kubernetes/apps/home-automation/esphome/app/httproute.yaml
@@ -15,5 +15,5 @@ spec:
             value: /
       backendRefs:
         - name: esphome
-          port: 6052
+          port: c
           weight: 1
