--- a/kubernetes/apps/home-automation/frigate/app/kustomization.yaml
+++ b/kubernetes/apps/home-automation/frigate/app/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - ./nfs-pvc.yaml
   - ./externalsecret.yaml
   - ./helmrelease.yaml
-  - ./httproute.yaml
+  - ./ingress.yaml
   - ./volsync.yaml
