--- a/kubernetes/apps/home-automation/home-assistant/app/kustomization.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./externalsecret.yaml
   - ./configmap.yaml
   - ./helmrelease.yaml
-  - ./httproute.yaml
+  - ./ingress.yaml
   # - ./volsync.yaml
 patchesStrategicMerge:
   - ./patches/addons.yaml
