--- a/kubernetes/apps/home-automation/home-assistant/app/ingress.yaml
+++ b/kubernetes/apps/home-automation/home-assistant/app/ingress.yaml
@@ -23,7 +23,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: frigate
+  name: home-assistant-code
   namespace: home-automation
 spec:
   ingressClassName: cilium
