--- a/kubernetes/apps/home-automation/zwave-js-ui/app/kustomization.yaml
+++ b/kubernetes/apps/home-automation/zwave-js-ui/app/kustomization.yaml
@@ -5,5 +5,5 @@ kind: Kustomization
 namespace: home-automation
 resources:
   - ./helmrelease.yaml
-  - ./httproute.yaml
+  - ./ingress.yaml
   - ./volsync.yaml
