--- a/kubernetes/apps/media/immich/app/proxy/ingress.yaml
+++ b/kubernetes/apps/media/immich/app/proxy/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: immich
-  namespace: home-automation
+  namespace: media
 spec:
   ingressClassName: cilium
   rules:
