--- a/kubernetes/apps/home-automation/kustomization.yaml
+++ b/kubernetes/apps/home-automation/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./esphome/ks.yaml
-  #- ./frigate/ks.yaml
+  - ./frigate/ks.yaml
   - ./home-assistant/ks.yaml
   - ./tidbyt-proxy/ks.yaml
   - ./unifi-downloader/ks.yaml
